--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Responsive Profile card</title>
+    <!-- css link -->
+     <link rel="stylesheet" href="styles.css">
+     <!-- Boxicons CSS -->
+<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <h4>Responsive profile card</h4>
+    <div class="profile-card">
+        <div class="images">
+            <img src="Passport.png" alt="" class="profile-img"></div>
+            <div class="text-data">
+                <span class="name">Onik Howlader</span>
+                <span class="job">Developer & Designer</span>
+            </div>
+            <div class="media-buttons">
+                <a href="https://www.facebook.com/onikhowladercse" target="_blank" style="background:#4267b2 ;" class="link"><i class='bx bxl-facebook'></i></a>
+                <a href="https://github.com/Onik-Howlader" target="_blank" style="background:#333 ;" class="link"><i class='bx bxl-github'></i></a>
+                <a href="#" style="background:#1da1f2 ;" class="link"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://x.com/Onik_Howlader?t=h36Ryvynws5rtba8aDyRGQ&s=09" target="_blank" style="background:#333 ;" class="link"><i class='bx bxl-twitter'></i></a>
+            </div>
+            <div class="buttons">
+                <button class="button">Subscribe</button>
+                <button class="button">Message</button>
+            </div>
+            <div class="analytics">
+                <div class="data">
+                    <i class='bx bx-heart' ></i>
+                    <span class="number">60k</span>
+                </div>
+                <div class="data">
+                    <i class='bx bx-message-rounded' ></i>
+                    <span class="number">20k</span>
+                </div>
+                <div class="data">
+                    <i class='bx bx-share' ></i>
+                    <span class="number">12k</span>
+                </div>
+
+            </div>
+    </div>
 </body>
 </html>
